--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
 </head>
 <body>
     <div class="container">
-        <div class="scroll-down"><p>scroll down</p></div>
-        <div class="slide-left">
-            <p>"slide from left"</p>
-            <img src="./image/abstraktsiia-antisfera-vodovorot-krasok-kartinka-chernyi-fon.jpg" alt="">
+        <div class="scroll-down">
+            <p class="down">scroll down</p>
         </div>
-        <div class="scroll-up"><p>scroll up</p></div>
+        <div class="slide-left">
+            <p class="slide1">"slide from left"</p>
+            <img class="slide2" src="./image/abstraktsiia-antisfera-vodovorot-krasok-kartinka-chernyi-fon.jpg" alt="">
+        </div>
+        <div class="scroll-up">
+            <p>scroll up</p>
+        </div>
     </div>
+
+
+     <!-- <div class="firstTask"><div class="scrollDown"><p class="down">Scroll
+                    down</p></div>
+            <div class="slide"><p class="left">"Slide from left"</p>
+                <div class="leftBord"></div></div>
+            <div class="image"></div>
+            <div class="scrollUp"><p class="up">Scroll up</p></div>
+        </div> -->
     
+
+    <script src="./main.js"></script>
 </body>
 </html>
