--- a/index.html
+++ b/index.html
@@ -17,19 +17,9 @@
             <img class="slide2" src="./image/abstraktsiia-antisfera-vodovorot-krasok-kartinka-chernyi-fon.jpg" alt="">
         </div>
         <div class="scroll-up">
-            <p>scroll up</p>
+            <p class="up">scroll up</p>
         </div>
     </div>
-
-
-     <!-- <div class="firstTask"><div class="scrollDown"><p class="down">Scroll
-                    down</p></div>
-            <div class="slide"><p class="left">"Slide from left"</p>
-                <div class="leftBord"></div></div>
-            <div class="image"></div>
-            <div class="scrollUp"><p class="up">Scroll up</p></div>
-        </div> -->
-    
 
     <script src="./main.js"></script>
 </body>
